--- a/latex/sections/rb_tree.tex
+++ b/latex/sections/rb_tree.tex
@@ -1,5 +1,5 @@
 \subsection{Rot-Schwarz-Baum}
-Der Rot-Schwarz-Baum stellt eine Erweiterung des bin-ären Suchbaums dar. Er wurde 1972 zum ersten mal von Rudolf Bayer unter dem Namen \glqq symmetric binary B-Tree\grqq{} vorgestellt.
+Der Rot-Schwarz-Baum stellt eine Erweiterung des bin-ären Suchbaums dar. Er wurde 1972 zum ersten mal von Rudolf Bayer unter dem Namen  \textit{symmetric binary B-Tree} vorgestellt.
 
 Ein binärer Suchbaum eignet sich zum schnellen Finden von Schlüsselelementen. Dabei werden die Elemente nicht wie in einer Liste sequentiell durchsucht, sondern es wird mit einer bestimmten Logik vorgegangen.
 Damit kann eine im Vergleich zur sequentiellen Liste die Laufzeit für verschiedene Operationen verkürzt werden.
@@ -45,7 +45,7 @@ Beim Einfügen bzw. Löschen im binäre Baum werden Verbindungen oder Blätter/K
 \newline
 \newline
 PROTOTYPE: \newline
-WIRD NOCH ERWEITERT UM ERKLÄRUNG DER DEFINITION, EINFÜGEN, SUCHEN, LÖSCHEN
+WIRD NOCH ERWEITERT UM ERKLÄRUNG DER DEFINITION, EINFÜGEN, SUCHEN, LÖSCHEN \& WIE UNGLEICHGEWICHT AUFGEHOBEN WIRD
 \newline
 %\newline
 %\newline
