tmp nach korrektur

--- a/latex/sections/aufbau.tex
+++ b/latex/sections/aufbau.tex
@@ -1,4 +1,8 @@
 \subsection{Funktionsweise}\label{s:cfs_fktweise}
+hier sollten wir mal reinschauen:
+https://www.ece.ubc.ca/~sasha/papers/eurosys16-final29.pdf
+
+
 Das Ziel eines  Completely-Fair-Schedulers{} soll es sein, eine gute Annäherung an das Verhalten eines perfekten Multitasking-Prozessor zu errreichen.
 
 Ein perfekter Multi\-tasking-Prozessor würde jedem Prozess immer ein perfektes $1/n$ Verhältnis zuweisen, wobei $n$ die Menge aller Prozesse darstellt. 
