--- a/latex/sections/cf_principe.tex
+++ b/latex/sections/cf_principe.tex
@@ -20,7 +20,7 @@ Eine Möglichkeit für eine solche Bewertung ist ein Vergleich von verbrauchten 
 Dies wird nach \cite{usenix} wie folgt definiert:
 
 \begin{equation}
-W_A(t_1,t_2) = (t_2 - t_1) \frac{S_A}{\sum_i S_i}
+W_{o,A}(t_1,t_2) = (t_2 - t_1) \frac{S_A}{\sum_i S_i}
 \label{eq:perfect_fairness}
 \end{equation}
 
