Korrektur angefangen nach EMAIL

--- a/latex/literatur.bib
+++ b/latex/literatur.bib
@@ -72,4 +72,15 @@
 	year = {2001},
 }
 
+@article{paperfairness,
+	author = {Chee Siang Wong and Ian Tan and Rosalind Deena Kumari and Fun Wey},
+	title = {Towards Achieving Fairness in the Linux Scheduler},
+	journal = {ACM SIGOPS Operating Systems Review - Research and developments in the Linux kernel},
+	year = {2008},
+	volume = {42},
+	issue = {5},
+	month = {July},
+	pages = {34-43},
+}
+
 
